Added content to devops.html page.

--- a/cloud.html
+++ b/cloud.html
@@ -27,7 +27,7 @@
             <div class="projects-left">
                 <div class="project-card">
                     <h3>Copy Files from one S3 Bucket to Another</h4>
-                    <p>AWS CLI, AWS S3</p>
+                    <p>AWS CLI, Amazon S3</p>
                     <a href="https://github.com/Agnes4Him/s3-copy-files-to-bucket" target="_blank">View</a>
                 </div>
                 <div class="project-card">
@@ -80,7 +80,7 @@
             </div>
         </div>
         <div class="devops-link">
-            <a href="devops.html">View DevOps Project</a>
+            <a href="devops.html">View DevOps Projects</a>
         </div>
     </div>
     <footer>
