--- a/about.html
+++ b/about.html
@@ -14,9 +14,9 @@
                 <h3>Cloud/DevOps Engineer</h3>
             </div>
             <div class="nav-btn-div">
-                <a href="about.html">About Me</a>
-                <a href="devops.html">DevOps Projects</a>
-                <a href="cloud.html">Cloud Projects</a>
+                <div><a href="about.html">About Me</a></div>
+                <div><a href="devops.html">DevOps Projects</a></div>
+                <div><a href="cloud.html">Cloud Projects</a></div>
             </div>
         </div>
     </div>
