--- a/devops.html
+++ b/devops.html
@@ -26,61 +26,56 @@
         <div class="projects-container">
             <div class="projects-left">
                 <div class="project-card">
-                    <h3>Copy Files from one S3 Bucket to Another</h4>
-                    <p>AWS CLI, AWS S3</p>
-                    <a href="https://github.com/Agnes4Him/s3-copy-files-to-bucket" target="_blank">View</a>
+                    <h3>React Multi-Stage Build Docker Image Deployed on Nginx server</h3>
+                    <p>Containerization, Docker, Programming, Nginx Server</p>
+                    <a href="https://github.com/Agnes4Him/container-projects" target="_blank">View</a>
                 </div>
                 <div class="project-card">
-                    <h3>Serverless 3-tier Architecture Full-Stack Application Deployment</h4>
-                    <p>Serverless, AWS S3, Lambda, API Gateway, DynamoDb, Certificate Manager, Route 53, CloudFront, Programming</p>
-                    <a href="https://github.com/Agnes4Him/3-tier-arch-serverless" target="_blank">View</a>
+                    <h3>Automate Amazon EKS provisioning</h3>
+                    <p>Infrastructure as Code(Terraform), Amazon EKS</p>
+                    <a href="https://github.com/Agnes4Him/provision-eks-with-terraform" target="_blank">View</a>
                 </div>
                 <div class="project-card">
-                    <h3>Deploy Containerized Application to Amazon ECS</h4>
-                    <p>Containerization, Docker, Amazon ECS</p>
-                    <a href="https://github.com/Agnes4Him/ecs-with-LB" target="_blank">View</a>
+                    <h3>Provision/Configure Remote Virtual Machine with Networking Components Using IaC</h3>
+                    <p>AWS EC2, Networking, Terraform</p>
+                    <a href="https://github.com/Agnes4Him/terraform-ec2-infras-deployment" target="_blank">View</a>
                 </div>
                 <div class="project-card">
-                    <h3>Secured WordPress Site Deployment with High Availabillity and Autoscaling</h4>
-                    <p>AWS EC2, WordPress Installation/Configurations, LAMP Stack, Autoscaling, LoadBalancing, Amazon RDS, Security, Networking</p>
-                    <a href="https://github.com/Agnes4Him/wordpress-with-LB" target="_blank">View</a>
+                    <h3>Automate Remote Server Volume Backup</h3>
+                    <p>Programming, Scripting, Python, AWS, Fault-tolerance, Disaster Recovery</p>
+                    <a href="https://github.com/Agnes4Him/backup-instance-volume" target="_blank">View</a>
                 </div>
                 <div class="project-card">
-                    <h3>Automate Starting and Stopping of Remote Server</h4>
-                    <p>Programming(Python), AWS Lambda, AWS CloudWatch Event Trigger</p>
-                    <a href="https://github.com/Agnes4Him/automate-start-stop-server" target="_blank">View</a>
+                    <h3>Complete CI/CD pipeline with Deployment to a Provisioned Kubernetes Cluster</h3>
+                    <p>Jenkins, GitOps, Docker, OWASP Dependency Check, SonarQube Analysis, Trivy, Terraform, Kubernetes</p>
+                    <a href="https://github.com/Agnes4Him/jenkins-gitops-deploy-k8s" target="_blank">View</a>
                 </div>
             </div>
             <div class="projects-right">
                 <div class="project-card">
-                    <h3>Deploy Secured Website to S3</h4>
-                    <p>AWS S3, Certificate Manager, Route 53, CloudFront</p>
-                    <a href="https://github.com/Agnes4Him/deploy-to-s3-cloudfront" target="_blank">View</a>
+                    <h3>Deployment of Microservices to Kubernetes Cluster using Helm</h3>
+                    <p>Microservices, Containerization, Kubernetes, Helm Charts, Helmfile</p>
+                    <a href="https://github.com/Agnes4Him/google-online-store-with-helm" target="_blank">View</a>
                 </div>
                 <div class="project-card">
-                    <h3>Database Migration from On-Premise to Cloud and Cloud to Cloud</h4>
-                    <p>Relational Database, Amazon RDS, Amazon DMS</p>
-                    <a href="https://github.com/Agnes4Him/db-migration" target="_blank">View</a>
+                    <h3>Implement Kubernetes Cluster Montoring</h3>
+                    <p>Microservices, API, Kubernetes, Prometheus, Grafana, Helm, Exporters</p>
+                    <a href="https://github.com/Agnes4Him/k8s-api-microsvc-app-monitoring" target="_blank">View</a>
                 </div>
                 <div class="project-card">
-                    <h3>Configure WordPress on Server and Create an Image</h4>
-                    <p>AWS EC2, WordPress Installation/Configurations, Apache, LAMP Stack, AWS AMI</p>
-                    <a href="https://github.com/Agnes4Him/ec2-wordpress-and-ami" target="_blank">View</a>
+                    <h3>Automate the Configuration of Remote Server</h3>
+                    <p>Terraform, Ansible, AWS, Networking</p>
+                    <a href="https://github.com/Agnes4Him/deploy-docker-compose-with-terraform-ansible" target="_blank">View</a>
                 </div>
                 <div class="project-card">
-                    <h3>Automate Scaling of Server Using AWS CloudWatch Alarm</h4>
-                    <p>AWS EC2, Nginx, CloudWatch Scaling Alarm, Autoscaling, LoadBalancing</p>
-                    <a href="https://github.com/Agnes4Him/autoscalinig-with-cloudwatch" target="_blank">View</a>
-                </div>
-                <div class="project-card">
-                    <h3>Secured WordPress Site Deployment with High Availabillity and Autoscaling using IaC</h4>
-                    <p>AWS EC2, Nginx, CloudWatch Scaling Alarm, Autoscaling, LoadBalancing, Infrastructure as Code(Terraform)</p>
-                    <a href="https://github.com/Agnes4Him/autoscalinig-with-cloudwatch" target="_blank">View</a>
+                    <h3>Complete CI/CD pipeline with Deployment to a Provisioned Server</h3>
+                    <p>Jenkins, GitOps, Docker, OWASP Dependency Check, SonarQube Analysis, Trivy, Terraform</p>
+                    <a href="https://github.com/Agnes4Him/jenkins-gitops-deploy-ec2" target="_blank">View</a>
                 </div>
             </div>
         </div>
         <div class="devops-link">
-            <a href="cloud.html">View Cloud Project</a>
+            <a href="cloud.html">View Cloud Projects</a>
         </div>
     </div>
     <footer>
