Edited project title in cloud.html.

--- a/cloud.html
+++ b/cloud.html
@@ -53,7 +53,7 @@
             </div>
             <div class="projects-right">
                 <div class="project-card">
-                    <h3>Deploy Secured Website to S3</h4>
+                    <h3>Host a Secured Website on Amazon S3</h4>
                     <p>AWS S3, Certificate Manager, Route 53, CloudFront</p>
                     <a href="https://github.com/Agnes4Him/deploy-to-s3-cloudfront" target="_blank">View</a>
                 </div>
