--- a/cloud.html
+++ b/cloud.html
@@ -46,9 +46,14 @@
                     <a href="https://github.com/Agnes4Him/wordpress-with-LB" target="_blank">View</a>
                 </div>
                 <div class="project-card">
-                    <h3>Automate Starting and Stopping of Remote Server</h4>
+                    <h3>Automate Start and Stop of Remote Server</h4>
                     <p>Programming(Python), AWS Lambda, AWS CloudWatch Event Trigger</p>
                     <a href="https://github.com/Agnes4Him/automate-start-stop-server" target="_blank">View</a>
+                </div>
+                <div class="project-card">
+                    <h3>Deploy Full-Stack microservices to AWS using CI/CD, BitBucket and Jira Automation</h4>
+                    <p>Python FastAPI framework, ReactJS, CircleCI, BitBucket, Jira, ECR, ECS, S3, Domain Registrar, Route 53, Certificate Manager, CloudFront</p>
+                    <a href="https://github.com/Agnes4Him/deploy-with-circleci-jira-ecr-ecs-s3-LB" target="_blank">View</a>
                 </div>
             </div>
             <div class="projects-right">
