Added anotherr project card to cloud.html."

--- a/cloud.html
+++ b/cloud.html
@@ -82,6 +82,11 @@
                     <p>AWS EC2, Nginx, CloudWatch Scaling Alarm, Autoscaling, LoadBalancing, Infrastructure as Code(Terraform)</p>
                     <a href="https://github.com/Agnes4Him/terraform-deploy-wordpress-site" target="_blank">View</a>
                 </div>
+                <div class="project-card">
+                    <h3>Inter-Regional AWS VPC Peering Connection</h4>
+                    <p>Networking, Peering Connection</p>
+                    <a href="https://github.com/Agnes4Him/terraform-deploy-wordpress-site" target="_blank">View</a>
+                </div>
             </div>
         </div>
         <div class="devops-link">
