Added a project card for a new project.

--- a/cloud.html
+++ b/cloud.html
@@ -55,6 +55,11 @@
                     <p>Python FastAPI framework, ReactJS, CircleCI, BitBucket, Jira, ECR, ECS, S3, Domain Registrar, Route 53, Certificate Manager, CloudFront</p>
                     <a href="https://github.com/Agnes4Him/deploy-with-circleci-jira-ecr-ecs-s3-LB" target="_blank">View</a>
                 </div>
+                <div class="project-card">
+                    <h3>Programmatically create AWS IAM users using SDK</h4>
+                    <p>AWS SDK, IAM User/Group, ReactJS, ExpressJS, Microservices</p>
+                    <a href="https://github.com/Agnes4Him/create-aws-iam-users" target="_blank">View</a>
+                </div>
             </div>
             <div class="projects-right">
                 <div class="project-card">
@@ -83,7 +88,7 @@
                     <a href="https://github.com/Agnes4Him/terraform-deploy-wordpress-site" target="_blank">View</a>
                 </div>
                 <div class="project-card">
-                    <h3>Inter-Regional AWS VPC Peering Connection</h4>
+                    <h3>Inter-Regional AWS VPCs Peering Connection</h4>
                     <p>Networking, Peering Connection</p>
                     <a href="https://github.com/Agnes4Him/inter-regional-vpc-peering" target="_blank">View</a>
                 </div>
