--- a/devops.html
+++ b/devops.html
@@ -72,6 +72,11 @@
                     <p>Jenkins, GitOps, Docker, OWASP Dependency Check, SonarQube Analysis, Trivy, Terraform</p>
                     <a href="https://github.com/Agnes4Him/jenkins-gitops-deploy-ec2" target="_blank">View</a>
                 </div>
+                <div class="project-card">
+                    <h3>GitLab CI/CD with Deployment to a Remote Server</h3>
+                    <p>GitLab CI/CD, GitOps, Docker, Java, Maven</p>
+                    <a href="https://github.com/Agnes4Him/jenkins-gitops-deploy-ec2" target="_blank">View</a>
+                </div>
             </div>
         </div>
         <div class="devops-link">
