Updated project link.

--- a/devops.html
+++ b/devops.html
@@ -75,7 +75,7 @@
                 <div class="project-card">
                     <h3>GitLab CI/CD with Deployment to a Remote Server</h3>
                     <p>GitLab CI/CD, GitOps, Docker, Java, Maven</p>
-                    <a href="https://github.com/Agnes4Him/jenkins-gitops-deploy-ec2" target="_blank">View</a>
+                    <a href="https://gitlab.com/Agnes4Him/java-petclinic-app-pipeline" target="_blank">View</a>
                 </div>
             </div>
         </div>
