Added a project card for azure devops project.

--- a/devops.html
+++ b/devops.html
@@ -50,6 +50,11 @@
                     <p>Jenkins, GitOps, Docker, OWASP Dependency Check, SonarQube Analysis, Trivy, Terraform, Kubernetes</p>
                     <a href="https://github.com/Agnes4Him/jenkins-gitops-deploy-k8s" target="_blank">View</a>
                 </div>
+                <div class="project-card">
+                    <h3>Azure pipeline with Deployment Azure Web App</h3>
+                    <p>Azure DevOps, CI/CD Java Maven, Azure Web App</p>
+                    <a href="https://dev.azure.com/ojuhagnes/_git/java-petshop-app" target="_blank">View</a>
+                </div>
             </div>
             <div class="projects-right">
                 <div class="project-card">
