--- a/cloud.html
+++ b/cloud.html
@@ -28,20 +28,23 @@
                 <div class="project-card">
                     <h3>Copy Files from one S3 Bucket to Another</h4>
                     <p>AWS CLI, Amazon S3</p>
+                    <!-- <a href="https://gitfront.io/r/user-5076831/UtBJHdZYznqM/s3-copy-files-to-bucket/" target="_blank">View</a> -->
                     <a href="https://github.com/Agnes4Him/s3-copy-files-to-bucket" target="_blank">View</a>
                 </div>
                 <div class="project-card">
                     <h3>Serverless 3-tier Architecture Full-Stack Application Deployment</h4>
                     <p>Serverless, AWS S3, Lambda, API Gateway, DynamoDb, Certificate Manager, Route 53, CloudFront, Programming</p>
-                    <a href="https://github.com/Agnes4Him/3-tier-arch-serverless" target="_blank">View</a>
+                    <!-- <a href="https://github.com/Agnes4Him/3-tier-arch-serverless" target="_blank">View</a> -->
+                    <a href="https://gitfront.io/r/user-5076831/gggkXMguHZqS/3-tier-arch-serverless/" target="_blank">View</a>
                 </div>
                 <div class="project-card">
                     <h3>Deploy Containerized Application to Amazon ECS</h4>
                     <p>Containerization, Docker, Amazon ECS</p>
-                    <a href="https://github.com/Agnes4Him/ecs-with-LB" target="_blank">View</a>
+                    <!-- <a href="https://github.com/Agnes4Him/ecs-with-LB" target="_blank">View</a> -->
+                    <a href="https://gitfront.io/r/user-5076831/wJXrfnYww8zq/ecs-with-LB/" target="_blank">View</a>
                 </div>
                 <div class="project-card">
-                    <h3>Secured WordPress Site Deployment with High Availabillity and Autoscaling</h4>
+                    <h3>Secure WordPress Site Deployment with High Availabillity and Autoscaling</h4>
                     <p>AWS EC2, WordPress Installation/Configurations, LAMP Stack, Autoscaling, LoadBalancing, Amazon RDS, Security, Networking</p>
                     <a href="https://github.com/Agnes4Him/wordpress-with-LB" target="_blank">View</a>
                 </div>
@@ -63,7 +66,7 @@
             </div>
             <div class="projects-right">
                 <div class="project-card">
-                    <h3>Host a Secured Website on Amazon S3</h4>
+                    <h3>Host a Secure Website on Amazon S3</h4>
                     <p>AWS S3, Certificate Manager, Route 53, CloudFront</p>
                     <a href="https://github.com/Agnes4Him/deploy-to-s3-cloudfront" target="_blank">View</a>
                 </div>
