Changed projects links."

--- a/cloud.html
+++ b/cloud.html
@@ -46,54 +46,64 @@
                 <div class="project-card">
                     <h3>Secure WordPress Site Deployment with High Availabillity and Autoscaling</h4>
                     <p>AWS EC2, WordPress Installation/Configurations, LAMP Stack, Autoscaling, LoadBalancing, Amazon RDS, Security, Networking</p>
-                    <a href="https://github.com/Agnes4Him/wordpress-with-LB" target="_blank">View</a>
+                    <!-- <a href="https://github.com/Agnes4Him/wordpress-with-LB" target="_blank">View</a> -->
+                    <a href="https://gitfront.io/r/user-5076831/mFySC6DLyQKG/wordpress-with-LB/" target="_blank">View</a>
                 </div>
                 <div class="project-card">
                     <h3>Automate Start and Stop of Remote Server</h4>
                     <p>Programming(Python), AWS Lambda, AWS CloudWatch Event Trigger</p>
-                    <a href="https://github.com/Agnes4Him/automate-start-stop-server" target="_blank">View</a>
+                    <!-- <a href="https://github.com/Agnes4Him/automate-start-stop-server" target="_blank">View</a> -->
+                    <a href="https://gitfront.io/r/user-5076831/HvtCLHJnBwV4/automate-start-stop-server/" target="_blank">View</a>
                 </div>
                 <div class="project-card">
                     <h3>Deploy Full-Stack microservices to AWS using CI/CD, BitBucket and Jira Automation</h4>
                     <p>Python FastAPI framework, ReactJS, CircleCI, BitBucket, Jira, ECR, ECS, S3, Domain Registrar, Route 53, Certificate Manager, CloudFront</p>
-                    <a href="https://github.com/Agnes4Him/deploy-with-circleci-jira-ecr-ecs-s3-LB" target="_blank">View</a>
+                    <!-- <a href="https://github.com/Agnes4Him/deploy-with-circleci-jira-ecr-ecs-s3-LB" target="_blank">View</a> -->
+                    <a href="https://gitfront.io/r/user-5076831/oUqhr4kikZTQ/deploy-with-circleci-jira-ecr-ecs-s3-LB/" target="_blank">View</a>
                 </div>
                 <div class="project-card">
                     <h3>Programmatically create AWS IAM users using SDK</h4>
                     <p>AWS SDK, IAM User/Group, ReactJS, ExpressJS, Microservices</p>
-                    <a href="https://github.com/Agnes4Him/create-aws-iam-users" target="_blank">View</a>
+                    <!-- <a href="https://github.com/Agnes4Him/create-aws-iam-users" target="_blank">View</a> -->
+                    <a href="https://gitfront.io/r/user-5076831/zhHWV2TGfT9P/create-aws-iam-users/" target="_blank">View</a>
                 </div>
             </div>
             <div class="projects-right">
                 <div class="project-card">
                     <h3>Host a Secure Website on Amazon S3</h4>
                     <p>AWS S3, Certificate Manager, Route 53, CloudFront</p>
-                    <a href="https://github.com/Agnes4Him/deploy-to-s3-cloudfront" target="_blank">View</a>
+                    <!-- <a href="https://github.com/Agnes4Him/deploy-to-s3-cloudfront" target="_blank">View</a> -->
+                    <a href="https://gitfront.io/r/user-5076831/V1b3RTpyiav9/deploy-to-s3-cloudfront/" target="_blank">View</a>
                 </div>
                 <div class="project-card">
                     <h3>Database Migration from On-Premise to Cloud and Cloud to Cloud</h4>
                     <p>Relational Database, Amazon RDS, Amazon DMS</p>
-                    <a href="https://github.com/Agnes4Him/db-migration" target="_blank">View</a>
+                    <!-- <a href="https://github.com/Agnes4Him/db-migration" target="_blank">View</a> -->
+                    <a href="https://gitfront.io/r/user-5076831/pWBWEf2ed6q3/db-migration/" target="_blank">View</a>
                 </div>
                 <div class="project-card">
                     <h3>Configure WordPress on Server and Create an Image</h4>
                     <p>AWS EC2, WordPress Installation/Configurations, Apache, LAMP Stack, AWS AMI</p>
-                    <a href="https://github.com/Agnes4Him/ec2-wordpress-and-ami" target="_blank">View</a>
+                    <!-- <a href="https://github.com/Agnes4Him/ec2-wordpress-and-ami" target="_blank">View</a> -->
+                    <a href="https://gitfront.io/r/user-5076831/hikPWWkrUzmF/ec2-wordpress-and-ami/" target="_blank">View</a>
                 </div>
                 <div class="project-card">
                     <h3>Automate Scaling of Server Using AWS CloudWatch Alarm</h4>
                     <p>AWS EC2, Nginx, CloudWatch Scaling Alarm, Autoscaling, LoadBalancing</p>
-                    <a href="https://github.com/Agnes4Him/autoscalinig-with-cloudwatch" target="_blank">View</a>
+                    <!-- <a href="https://github.com/Agnes4Him/autoscalinig-with-cloudwatch" target="_blank">View</a> -->
+                    <a href="https://gitfront.io/r/user-5076831/66wPRx6AKaBE/autoscalinig-with-cloudwatch/" target="_blank">View</a>
                 </div>
                 <div class="project-card">
-                    <h3>Secured WordPress Site Deployment with High Availabillity and Autoscaling using IaC</h4>
+                    <h3>Secure WordPress Site Deployment with High Availabillity and Autoscaling using IaC</h4>
                     <p>AWS EC2, Nginx, CloudWatch Scaling Alarm, Autoscaling, LoadBalancing, Infrastructure as Code(Terraform)</p>
-                    <a href="https://github.com/Agnes4Him/terraform-deploy-wordpress-site" target="_blank">View</a>
+                    <!-- <a href="https://github.com/Agnes4Him/terraform-deploy-wordpress-site" target="_blank">View</a> -->
+                    <a href="https://gitfront.io/r/user-5076831/Df8jBTn98WJ5/terraform-deploy-wordpress-site/" target="_blank">View</a>
                 </div>
                 <div class="project-card">
-                    <h3>Inter-Regional AWS VPCs Peering Connection</h4>
+                    <h3>Inter-Region AWS VPCs Peering Connection</h4>
                     <p>Networking, Peering Connection</p>
-                    <a href="https://github.com/Agnes4Him/inter-regional-vpc-peering" target="_blank">View</a>
+                    <!-- <a href="https://github.com/Agnes4Him/inter-regional-vpc-peering" target="_blank">View</a> -->
+                    <a href="https://gitfront.io/r/user-5076831/sWUeCQ6Hhbsy/inter-regional-vpc-peering/" target="_blank">View</a>
                 </div>
             </div>
         </div>
