--- a/devops.html
+++ b/devops.html
@@ -28,27 +28,32 @@
                 <div class="project-card">
                     <h3>React Multi-Stage Build Docker Image Deployed on Nginx server</h3>
                     <p>Containerization, Docker, Programming, Nginx Server</p>
-                    <a href="https://github.com/Agnes4Him/container-projects" target="_blank">View</a>
+                    <!-- <a href="https://github.com/Agnes4Him/container-projects" target="_blank">View</a> -->
+                    <a href="https://gitfront.io/r/user-5076831/iJyr2yHaTcPf/container-projects/" target="_blank">View</a>
                 </div>
                 <div class="project-card">
                     <h3>Automate Amazon EKS provisioning</h3>
                     <p>Infrastructure as Code(Terraform), Amazon EKS</p>
-                    <a href="https://github.com/Agnes4Him/provision-eks-with-terraform" target="_blank">View</a>
+                    <!-- <a href="https://github.com/Agnes4Him/provision-eks-with-terraform" target="_blank">View</a> -->
+                    <a href="https://gitfront.io/r/user-5076831/CYLxxBM4UzGm/provision-eks-with-terraform/" target="_blank">View</a>
                 </div>
                 <div class="project-card">
                     <h3>Provision/Configure Remote Virtual Machine with Networking Components Using IaC</h3>
                     <p>AWS EC2, Networking, Terraform</p>
-                    <a href="https://github.com/Agnes4Him/terraform-ec2-infras-deployment" target="_blank">View</a>
+                    <!-- <a href="https://github.com/Agnes4Him/terraform-ec2-infras-deployment" target="_blank">View</a> -->
+                    <a href="https://gitfront.io/r/user-5076831/a7XwDGZg3ojv/terraform-ec2-infras-deployment/" target="_blank">View</a>
                 </div>
                 <div class="project-card">
                     <h3>Automate Remote Server Volume Backup</h3>
                     <p>Programming, Scripting, Python, AWS, Fault-tolerance, Disaster Recovery</p>
-                    <a href="https://github.com/Agnes4Him/backup-instance-volume" target="_blank">View</a>
+                    <!-- <a href="https://github.com/Agnes4Him/backup-instance-volume" target="_blank">View</a> -->
+                    <a href="https://gitfront.io/r/user-5076831/4EP4hS7jzGt5/backup-instance-volume/" target="_blank">View</a>
                 </div>
                 <div class="project-card">
                     <h3>Complete CI/CD pipeline with Deployment to a Provisioned Kubernetes Cluster</h3>
                     <p>Jenkins, GitOps, Docker, OWASP Dependency Check, SonarQube Analysis, Trivy, Terraform, Kubernetes</p>
-                    <a href="https://github.com/Agnes4Him/jenkins-gitops-deploy-k8s" target="_blank">View</a>
+                    <!-- <a href="https://github.com/Agnes4Him/jenkins-gitops-deploy-k8s" target="_blank">View</a> -->
+                    <a href="https://gitfront.io/r/user-5076831/ghg3MUHXc562/jenkins-gitops-deploy-k8s/" target="_blank">View</a>
                 </div>
                 <div class="project-card">
                     <h3>Azure pipeline with Deployment to Azure Web App</h3>
@@ -60,22 +65,26 @@
                 <div class="project-card">
                     <h3>Deployment of Microservices to Kubernetes Cluster using Helm</h3>
                     <p>Microservices, Containerization, Kubernetes, Helm Charts, Helmfile</p>
-                    <a href="https://github.com/Agnes4Him/google-online-store-with-helm" target="_blank">View</a>
+                    <!-- <a href="https://github.com/Agnes4Him/google-online-store-with-helm" target="_blank">View</a> -->
+                    <a href="https://gitfront.io/r/user-5076831/ZkRXe3kR2ZR5/google-online-store-with-helm/" target="_blank">View</a>
                 </div>
                 <div class="project-card">
                     <h3>Implement Kubernetes Cluster Montoring</h3>
                     <p>Microservices, API, Kubernetes, Prometheus, Grafana, Helm, Exporters</p>
-                    <a href="https://github.com/Agnes4Him/k8s-api-microsvc-app-monitoring" target="_blank">View</a>
+                    <!-- <a href="https://github.com/Agnes4Him/k8s-api-microsvc-app-monitoring" target="_blank">View</a> -->
+                    <a href="https://gitfront.io/r/user-5076831/ypniGyD1jLGZ/k8s-api-microsvc-app-monitoring/" target="_blank">View</a>
                 </div>
                 <div class="project-card">
                     <h3>Automate the Configuration of Remote Server</h3>
                     <p>Terraform, Ansible, AWS, Networking</p>
-                    <a href="https://github.com/Agnes4Him/deploy-docker-compose-with-terraform-ansible" target="_blank">View</a>
+                    <!-- <a href="https://github.com/Agnes4Him/deploy-docker-compose-with-terraform-ansible" target="_blank">View</a> -->
+                    <a href="https://gitfront.io/r/user-5076831/jtza7tmogD7P/deploy-docker-compose-with-terraform-ansible/" target="_blank">View</a>
                 </div>
                 <div class="project-card">
                     <h3>Complete CI/CD pipeline with Deployment to a Provisioned Server</h3>
                     <p>Jenkins, GitOps, Docker, OWASP Dependency Check, SonarQube Analysis, Trivy, Terraform</p>
-                    <a href="https://github.com/Agnes4Him/jenkins-gitops-deploy-ec2" target="_blank">View</a>
+                    <!-- <a href="https://github.com/Agnes4Him/jenkins-gitops-deploy-ec2" target="_blank">View</a> -->
+                    <a href="https://gitfront.io/r/user-5076831/9Q8US4AeHq7R/jenkins-gitops-deploy-ec2/" target="_blank">View</a>
                 </div>
                 <div class="project-card">
                     <h3>GitLab CI/CD with Deployment to a Remote Server</h3>
