Added a project card for GitHub Actions project.

--- a/devops.html
+++ b/devops.html
@@ -91,6 +91,12 @@
                     <p>GitLab CI/CD, GitOps, Docker, Java, Maven</p>
                     <a href="https://gitlab.com/Agnes4Him/java-petclinic-app-pipeline" target="_blank">View</a>
                 </div>
+                <div class="project-card">
+                    <h3>GitHub Actions Demonstration</h3>
+                    <p>GitHub Actions, Docker, NestJS, Automated testing</p>
+                    <!-- <a href="https://github.com/Agnes4Him/github-actions-nestjs-app" target="_blank">View</a> -->
+                    <a href="https://gitfront.io/r/user-5076831/ob2LNqaVgKko/github-actions-nestjs-app/" target="_blank">View</a>
+                </div>
             </div>
         </div>
         <div class="devops-link">
