--- a/about.html
+++ b/about.html
@@ -17,6 +17,7 @@
                 <div><a href="about.html">About Me</a></div>
                 <div><a href="devops.html">DevOps Projects</a></div>
                 <div><a href="cloud.html">Cloud Projects</a></div>
+                <div><a href="mlops.html">MLOps Projects</a></div>
             </div>
         </div>
     </div>
@@ -73,13 +74,14 @@
             <div class="nav-btn-div2">
                 <a href="cloud.html">Cloud Projects</a>
                 <a href="devops.html">DevOps Projects</a>
+                <a href="mlops.html">MLOps Projects</a>
             </div>
         </div>
     </div>
     <footer>
         <a href="https://www.linkedin.com/in/agnes-olorundare-446055b8/" target="_blank">LinkedIn</a>
         <div>
-            <small>&copy; 2023. All Rights Reserved</small>
+            <small>&copy; 2024. All Rights Reserved</small>
         </div>
     </footer>
 </body>
