--- a/cloud.html
+++ b/cloud.html
@@ -17,6 +17,7 @@
                 <div><a href="about.html">About Me</a></div>
                 <div><a href="devops.html">DevOps Projects</a></div>
                 <div><a href="cloud.html">Cloud Projects</a></div>
+                <div><a href="mlops.html">MLOps Projects</a></div>
             </div>
         </div>
     </div>
@@ -108,13 +109,14 @@
             </div>
         </div>
         <div class="devops-link">
-            <a href="devops.html">View DevOps Projects</a>
+            <a href="devops.html">DevOps Projects</a>
+            <a href="mlops.html">MLOps Projects</a>
         </div>
     </div>
     <footer>
         <a href="https://www.linkedin.com/in/agnes-olorundare-446055b8/" target="_blank">LinkedIn</a>
         <div>
-            <small>&copy; 2023. All Rights Reserved</small>
+            <small>&copy; 2024. All Rights Reserved</small>
         </div>
     </footer>
 </body>
